# mirrors-ipc-toolkit

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  pyproject.toml
.config/: cspell.config.yaml
.config/copier/: .copier-answers.shared.yaml
.config/mise/conf.d/: 50-shared.toml
.github/workflows/: custom-ci.yaml  shared-copier-update.yaml  shared-mega-linter.yaml
ipctk-stubs/: hatch_build.py  pyproject.toml
